--- a/front/template/app/index.html
+++ b/front/template/app/index.html
@@ -10,14 +10,10 @@
     <style>
         .c-item{
             height: 38rem;
+            width: 100%;
             background: #ffffff;
         }
-        .c-image{
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            filter:brightness(0.6);
-        }
+      
         h1 {
         color: rgb(165, 67, 178);
         font-weight: 200;
@@ -95,8 +91,13 @@
         </button>
       </div>
 
-    <div id="about" class="about" data-bs-ride="about">
-      <div style="width: 100%; height: 100%; position: relative; background: #D8D7F6">
+
+
+
+
+      
+    <div class="container-center">
+      <div style="width: 100%; height: 80%; position: absolute; background: #D8D7F6">
         <img  style="width: 56px; height: 34px; left: 169px; top: 40px; position: absolute"src="d:\Graduation project\web\home1.svg" />
         <div style="width: 47.03px; height: 27.87px; left: 1305px; top: 510px; position: absolute">
             <div style="width: 5.23px; height: 15.24px; left: 0px; top: 12.19px; position: absolute; border: 2px #060640 solid"></div>
@@ -104,7 +105,7 @@
         </div>
         <div style="width: 356px; height: 81px; left: 100px; top: 92px; position: absolute"><span style="color: black; font-size: 48px; font-family: Alike; font-weight: 400; line-height: 14px; word-wrap: break-word">About Us<br/><br/><br/><br/></span><span style="color: black; font-size: 36px; font-family: Alike; font-weight: 400; line-height: 4px; word-wrap: break-word">CourseConnect</span></div>
         <div style="width: 794px; height: 297px; left: 100px; top: 250px; position: absolute; color: black; font-size: 24px; font-family: Inter; font-weight: 400; word-wrap: break-word">Online Learning is the name of the game in education today ,various platforms are offering high quality courses with competitive prices or even free !!<br/><br/>but students and self-learners world wide waste tremendous time in exhaustive search to find the right courses for them, We got you covered with our first of its kind recommendation website that compare courses from the leading courses platform and get you tailored recommendations within seconds .</div>
-        <img style="width: 500px; height: 503px; left: 1000px; top: 35px; position: absolute" src="d:\Graduation project\web\home1.png" />
+        <img style="width: 500px; height: 503px; left: 980px; top: 35px; position: absolute" src="d:\Graduation project\web\home1.png" />
         <div style="width: 198.33px; height: 194px; left: 960px; top: 373px; position: absolute">
             <div style="width: 198.33px; height: 167.06px; left: 0px; top: 26.94px; position: absolute; background: white; box-shadow: -15px 20px 70px rgba(0, 0, 46.75, 0.03); border-radius: 10px; overflow: hidden">
                 <div style="width: 150.50px; height: 44.33px; left: 23.33px; top: 29.17px; position: absolute; color: #060640; font-size: 16.33px; font-family: Actor; font-weight: 400; line-height: 22.17px; word-wrap: break-word">Rewarded <br/>growth guaranteed</div>
