--- a/front/template/app/UserProfile.html
+++ b/front/template/app/UserProfile.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     
     <!-- CSS Files -->
-    <link rel="stylesheet" href="CSS/font-awesome.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../static/app/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/app/css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -42,7 +42,7 @@
             <div class="about-info-title">
                 <img src="" alt="">
                 <i class="fa fa-camera" aria-hidden="true"></i>
-                <h2>User Name</h2>
+                <h2 class="username">User Name</h2>
                 <h3>@username</h3>
             </div>
             <div class="about-info-options">
@@ -59,39 +59,39 @@
         
         <div class="other-info">
             <div class="skills">
+                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 <h4>Skills</h4>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                 <h6>Skill 1</h6>
                 <h6>Skill 2</h6>
                 <h6>Skill 3</h6>
                 <button>Show All</button>
             </div>  <!-- ./skills -->
             <div class="goals">
+                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 <h4>Goals</h4>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                 <h6>Goal 1</h6>
                 <h6>Goal 2</h6>
                 <h6>Goal 3</h6>
                 <button>Show All</button>
             </div>  <!-- ./goals -->
             <div class="experience">
+                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 <h4>Experience</h4>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                 <h6>Exp 1</h6>
                 <h6>Exp 2</h6>
                 <h6>Exp 3</h6>
                 <button>Show All</button>
             </div>  <!-- ./experience -->
             <div class="my-courses">
+                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                 <h4>My Courses</h4>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                 <h6>Course 1</h6>
                 <h6>Course 2</h6>
-                <h6>Course 3</h6>
+                <h6>Course 3</h6>               
                 <button>Show All</button>
             </div>  <!-- ./my-courses -->
         </div>  <!-- ./other-info -->
