--- a/front/template/app/UserProfile.html
+++ b/front/template/app/UserProfile.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     
     <!-- CSS Files -->
-    <link rel="stylesheet" href="../static/app/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/app/css/style.css">
+    <link rel="stylesheet" href="CSS/font-awesome.min.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -54,7 +54,7 @@
                 <h5 class="about-info-options-title">Language:</h5>
                 <h5 class="about-info-options-title">Social Websites:</h5>
             </div>  <!-- ./about-info-options -->
-            <div class="edit-profile-btn"><button>Edit Profile</button></div>
+            <div><button class="edit-profile-btn"><span>Edit Profile</span></button></div>
         </div>  <!-- ./about-info -->
         
         <div class="other-info">
