--- a/front/template/app/UserProfile.html
+++ b/front/template/app/UserProfile.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     
     <!-- CSS Files -->
-    <link rel="stylesheet" href="CSS/font-awesome.min.css">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../../static/app/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../static/app/css/style.css">
 </head>
 <body>
     <!-- Header -->
