--- a/front/template/app/UserProfile.html
+++ b/front/template/app/UserProfile.html
@@ -21,7 +21,7 @@
     <div class="header">
         <div class="header-container">
             <div class="logo">
-                <a href="#"><img src="Images/Logo_14.png" alt="LOGO" width="110" height="75" draggable="false"></a>
+                <a href="#"><img src="../../static/app/images/Logo_14.png" alt="LOGO" width="110" height="75" draggable="false"></a>
                 <h2>My Profile</h2>
             </div>
             <ul class="nav">
