--- a/front/template/app/UserProfile.html
+++ b/front/template/app/UserProfile.html
@@ -14,7 +14,7 @@
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="../../static/app/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../static/app/css/style.css">
+    <link rel="stylesheet" href="../../static/app/css/style_userprofile.css">
 </head>
 <body>
     <!-- Header -->
