--- a/front/template/app/login.html
+++ b/front/template/app/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login.css">  <!--3adely el href -->
     
 </head>
 <body>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="element2">
-           <img src="login.jpg" alt="">
+          <img src="login.jpg" alt="">     <!--3adely el src -->
            
         </div>
     </div>
