--- a/front/static/app/css/login.css
+++ b/front/static/app/css/login.css
@@ -125,8 +125,8 @@ input{
     justify-content: space-around;
 }
 
-.signuo{
-    color: #6A74CF;
+.signup{
+    color: #ffffff;
     font-family: Blinker;
     font-size: 0.75rem;
     font-style: normal;
