--- a/front/static/app/css/login.css
+++ b/front/static/app/css/login.css
@@ -46,15 +46,7 @@ img{
     
 }
 
-.login{
-    color: #FFF;
-    margin: 3rem;
-    font-family: Blinker;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-}
+
 
 input{
     border: none;
@@ -67,54 +59,17 @@ input{
 
 
 }
-.login-btn{
-    margin-top: 1rem;
-    border: none;
-    color: #FFF;
-    font-family: Blinker;
-    font-size: 0.75rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: 20vw;
-    height: 6vh;
-    border-radius: 4.8125rem;
-    background: #6A74CF;
-    box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.15);
 
 
-}
-.forget{
-    margin-top: 2rem;
-    color: #FFF;
-    font-family: Blinker;
-    font-size: 0.75rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
 
-}
-.connect{
-    color: #7A7A7A;
-    font-family: Blinker;
-    font-size: 0.75rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
 .Facebook, .twitter{
     border-radius: 4.8125rem;
     background: #35A6EF;
     width: 9vw;
     height: 4vh;
     box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.15);
-    color: #FFF;
     border: none;
-    font-family: Blinker;
     font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
 }
 .twitter{
     background: #5073B5;
@@ -125,13 +80,47 @@ input{
     justify-content: space-around;
 }
 
-.signup{
+.font-style{
+
     color: #ffffff;
     font-family: Blinker;
-    font-size: 0.75rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.login-btn{
+    margin-top: 1rem;
+    border: none;
+    color: #FFF;
+     width: 20vw;
+    height: 6vh;
+    border-radius: 4.8125rem;
+    background: #6A74CF;
+    box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.login{
+   
+    margin: 3rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    
+}
+.forget{
+    margin-top: 2rem;
+   
+
+}
+
+/* al tarteb mohm dont change it */
+.connect{
+    color: #7A7A7A;
+    
+
+}
+.font-size{
+    font-size: 0.75rem;
 }
 @media only screen and (max-width: 900px) {
 
