--- a/front/template/app/login.html
+++ b/front/template/app/login.html
@@ -11,23 +11,23 @@
     
     <div class="container">
         <div class="element1">
-         <p class="login">Login</p>
+         <p class="login font-style ">Login</p>
          <form action="POST" class="input-form">
             <input type="text">
             <input type="text">
-            <button type="submit" class="login-btn">Login</button>
+            <button type="submit" class="login-btn font-style font-size">Login</button>
          </form>
-         <p class="forget">Forget your password?</p>
-         <p class="connect">or connect with</p>
+         <p class="forget font-style font-size">Forget your password?</p>
+         <p class="connect font-style font-size">or connect with</p>
          <div class="div-buttons">
-            <button class="Facebook">
+            <button class="Facebook font-style">
                 Facebook
             </button>
-            <button class="twitter">
+            <button class="twitter font-style">
                 Twitter
             </button>
          </div>
-         <p class="signup">Don’t have account? Sign up </p>
+         <p class="signup font-style font-size">Don’t have account? Sign up </p>
          
         </div>
 
