--- a/front/template/app/login.html
+++ b/front/template/app/login.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="element2">
-          <img src="../../static/app/images/login.png" alt="">    
+          <img src="../../static/app/images/login.jpg" alt="">    
            
         </div>
     </div>
