--- a/ec/app/templates/app/base.html
+++ b/ec/app/templates/app/base.html
@@ -17,10 +17,10 @@
         </div>
         <div class="sign">
             <button class="btn2">
-                <a href="#" class="btn2-a">sign in</a>
+                <a href="register" class="btn2-a">sign in</a>
              </button>
             <button class="btn1">
-                <a href="#" class="btn_a">sign up</a>
+                <a href="register" class="btn_a">sign up</a>
          </button>
          <!-- <a href=""><img src="../../images/profile.PNG" alt="setting"></a>
          <a href=""><img src="../../images/profile.PNG" alt="profile"></a> -->
