--- a/ec/app/templates/app/index.html
+++ b/ec/app/templates/app/index.html
@@ -11,9 +11,8 @@
    
 
 
-   
 
-      <! –– sliding banner %% -->
+      <!-- sliding banner %%--> 
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
@@ -95,7 +94,7 @@
           <div class="card-body">
             <h5 class="card-title">Find  Courses</h5>
             <p class="card-text">Find the course you are looking for from all the leading courses' websites with one click.</p>
-            <a href="#" class="btn btn-primary">Sign Up/ Sign In</a>
+            <a href="register.html" class="btn btn-primary">Sign Up/ Sign In</a>
           </div>
         </div>
       </div>
