--- a/ec/app/static/app/css/base.css
+++ b/ec/app/static/app/css/base.css
@@ -1,12 +1,8 @@
 a{
-    text-decoration: none;
-    color: #828297;
-    font-family: Alike;
-    font-size: 24px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 14px; /* 58.333% */
-
+    font-family: 'Kdam Thmor Pro', sans-serif;  
+    font-size: 1.3em;    
+   text-decoration: none;
 }
 .nav{
     display: flex;
@@ -41,27 +37,41 @@ nav{
     align-items: center;
     flex-shrink: 0;
     border-radius:5px;
+    
 }
 .btn2{
     border: 0px ;
     background-color: white;
 }
-.btn1, .btn2:hover{
-    border-radius: 6px;
-    background: #060640;
+.btn1{
+    border-radius: 10px;
+    background: hsl(240, 83%, 36%);
     border: 0px ;
 
 
 }
-.btn_a, .btn2-a:hover{
+.btn_a{
     color: white;
+    text-decoration: none;
 
 }
+.btn2-a:hover{
+    border-bottom: 3px solid #060640;
+    padding-bottom: 3px;
+}
+
+.btn1:hover{
+    border-bottom: 3px  solid white;
+    border-top: 3px  solid white;
+    border-left: 0.5px  solid white;
+    border-right:0.5px  solid white;
+    border-radius: 12px;
+}
+
 .btn2-a{
     color:black;
-}
-body{
-    height: 2000px;
+    text-decoration: none;
+
 }
 .logo{
     width: 12vw;
@@ -70,17 +80,22 @@ body{
     float: left;
     padding-left: 3rem;
 }
+
+.option{
+    text-decoration: none;
+    color: rgba(120, 122, 130, 0.943);
+
+}
 .active, .option:hover{
-    color: #EBC4E3;
+    color: #9298eb;
 }
 
 footer{
     background-color:#060640;
-    height: 8%;
 }
 .logo_foot{
-    width: 15vw;
-    height: 15vh;
+    width: 10vw;
+    height: 10vh;
     margin-left: 12%;
 
 }
@@ -95,4 +110,18 @@ p{
     position: relative;
     right: 25%;
     bottom: 20%;
+}
+
+body{
+    height: fit-content;
+}
+
+.account{
+    display: flex;
+    gap: 1rem;
+   margin-left: 20vw;
+}
+.profilelogo:hover{
+    resize: 150%;
+
 }
