--- a/ec/app/templates/app/courses.html
+++ b/ec/app/templates/app/courses.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../../static/app/css/courses.css">   
 </head>
 <body>
-    
     <div class="cover">
     <div class="filter">
         <fieldset>
@@ -133,16 +132,24 @@
             <input type="checkbox" name="1">
             <label for="1">second</label>
             <br>
-
-
         </fieldset>
     </div>
+    <button class="hidden" > >> </button>
     <div class="courses">
 <img src="../../static/app/images/image 69.png" alt="" style="height: 2.5vh; width:1.25vw ;float: right;">
 
     </div>
     </div>
+    
+    <script src= 
+    "https://code.jquery.com/jquery-3.7.1.min.js"
+                integrity= 
+    "sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" 
+                crossorigin="anonymous"> 
+            </script> 
+<script src="../../static/app/js/courses.js"></script>
     </body>
+
 </html>
 
 {% endblock courses-section%}
