--- a/ec/app/templates/app/base.html
+++ b/ec/app/templates/app/base.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="nav">
         <a href="home" class=" option active" >Home</a> 
-        <a href="UserProfile" class="option">My Profile</a>
+        <a href="#" class="option">Recommendation</a>
         <a href="courses" class="option">Courses</a>
         <a href="#" class="option">Contact Us</a>
         </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="account">
             <a href="" class="profilelogo"><img src="../static/app/images/notification.png" alt="profile" style=" border-radius: 50px; width: 1.5em; height: 1.5em;"></a>
-            <a href="" class="profilelogo"><img src="../static/app/images/profile.jpg" alt="profile" style=" border-radius: 50px; width: 1.7em; height: 1.7em;"></a>
+            <a href="UserProfile" class="profilelogo"><img src="../static/app/images/profile.jpg" alt="profile" style=" border-radius: 50px; width: 1.7em; height: 1.7em;"></a>
         </div>
      </nav>
 
