--- a/ec/app/templates/app/courses.html
+++ b/ec/app/templates/app/courses.html
@@ -134,7 +134,7 @@
             <br>
         </fieldset>
     </div>
-    <button class="hidden" > >> </button>
+    <button class="hidden" > << </button>
     <div class="courses">
 <img src="../../static/app/images/image 69.png" alt="" style="height: 2.5vh; width:1.25vw ;float: right;">
 
