--- a/ec/app/static/app/css/courses.css
+++ b/ec/app/static/app/css/courses.css
@@ -8,7 +8,7 @@
     width: 86vw;
 }
 .filter{
-    height: 78vh;
+    height: 87.5vh;
     overflow: auto;
     margin-top: -60px ;
     width: fit-content;
@@ -18,8 +18,6 @@ footer{
     width: 100%;
     position: fixed;
     bottom: 0px;
-    grid-area: footer;
-    height:10px;
 }
 
 
@@ -51,14 +49,22 @@ fieldset{
 
 
 .hidden{
-    /* grid-area: more-less; */
     font-weight: 900;
     display: flex;
     align-items: center;
     width: fit-content;
-    /* margin-top: -650px; */
-    border: 0px;
-    /* margin-left: 0vw; */
+    border-radius: 0px 5px 5px 0px;
+    position: absolute;
+    top: 0px;
+    left:12vw;
+    padding: 0px;
+    font-size: 0.7em;
+    color: #4e4ed2;
+    border-top: 0.1em solid gray;
+    border-right: 0.1em solid gray;
+    border-bottom: 0.1em solid gray;
+    border-left: 0px;
+
 }
 
 
@@ -70,4 +76,15 @@ nav{
 
 a{
     font-size: 1em;
+}
+
+p{
+    font-size: 1rem;
+
+}
+
+.logo_foot{
+    width: 8vw;
+    height: 8vh;
+    margin-left: 15%;
 }
