--- a/ec/app/templates/app/courses.html
+++ b/ec/app/templates/app/courses.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="../../static/app/css/courses.css">   
 </head>
 <body>
+    <div class="input-group" >
+        <div class="form-outline" data-mdb-input-init>
+          <input id="search-input" type="search" placeholder="search" class="form-control" />
+        </div>
+        <button id="search-button" type="button" class="btn btn-primary">
+search
+        </button>
+      </div>
+      
     <div class="cover">
     <div class="filter">
         <fieldset>
