--- a/ec/app/templates/app/courses.html
+++ b/ec/app/templates/app/courses.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../static/app/css/courses.css">   
 </head>
 <body>
-    <div class="input-group" >
+    <div class="input-group" style="justify-content: end;" >
         <div class="form-outline" data-mdb-input-init>
           <input id="search-input" type="search" placeholder="search" class="form-control" />
         </div>
