--- a/CourseConnect/templates/pages/CoursesList.html
+++ b/CourseConnect/templates/pages/CoursesList.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block main-content %}
+{% block title %}All Courses | CourseConnect{% endblock title %}
+{% block content %}
 <section class="section">
+    <div>
+        {% for category in categories %}
+            <div><a href="{% url 'category' category %}">{{ category.Type }}</a></div>
+        {% endfor %}
+    </div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10">
@@ -28,10 +34,12 @@
                                     <th>Last_Updated</th>
                                     <th>Category</th>
                                     <th>Instructors</th>
+                                    <th>Skill_id</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for course in courses_list %}
+                                {% for course in courses %}
                                     <tr>
                                         <td>{{ course.id }}</td>
                                         {% if course.Image %}
@@ -59,6 +67,8 @@
                                         <td>{{ course.Last_Updated }}</td>
                                         <td>{{ course.Category }}</td>
                                         <td>{{ course.Instructors }}</td>
+                                        <td>{{ course.Skill_id }}</td>
+                                        <td><a href="{% url 'course' course.id %}">View Course</a></td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
@@ -67,6 +77,26 @@
                 </div>
             </div>
         </div>
+        {% if is_paginated %}
+            {% if page_obj.has_previous %}
+                <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+                <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3'  %}
+                    <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+                {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+                <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+            {% endif %}
+
+        {% endif %}
     </div>
 </section>
-{% endblock main-content %}
+{% endblock %}
