--- a/CourseConnect/templates/pages/LoginPage.html
+++ b/CourseConnect/templates/pages/LoginPage.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/CSS/login.css">
-    <title>Sign In</title>
+    <link rel="shortcut icon" type="image/png" href="static/Images/favicon.ico">
+    <title>Sign In | CourseConnect</title>
 </head>
 <body>
     <div class="container">
         <div class="element1">
-         <p class="login font-style ">Login</p>
-         <form action="POST" class="input-form">
-            <input type="text">
-            <input type="text">
+            <p class="login font-style">Login</p>
+            {% for message in messages %}
+                <h5 style="color:red; position:absolute;top: 345px; left: 420px;">{{message}}</h5>
+            {% endfor %}
+         <form method="POST" action="{% url 'login' %}" class="input-form">
+            {% csrf_token %}
+            <input type="username" name="username" placeholder="Enter Your Username">
+            <input type="password" name="password" placeholder="Enter Your Password">
             <button type="submit" class="login-btn font-style font-size">Login</button>
          </form>
-         <p class="forget font-style font-size">Forgotten password?</p>
+         <a href ="{% url 'reset_password' %}" class="forget font-style font-size" style="color: black; font-size: medium;">Forgotten password?</a>
          <p class="connect font-style font-size">or connect with</p>
          <div class="div-buttons">
             <button class="Facebook font-style">
@@ -25,7 +30,7 @@
                 Twitter
             </button>
          </div>
-         <p class="signup font-style font-size">Don’t have account? Sign up </p>
+         <p class="signup font-style font-size">Don’t have account? <a href="{% url 'register' %}">Sign Up</a></p>
         </div>
         <div class="element2">
           <img src="static/Images/login.jpg" alt="">    
