--- a/CourseConnect/templates/pages/UserProfile.html
+++ b/CourseConnect/templates/pages/UserProfile.html
@@ -1,76 +1,63 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Profile{% endblock title %}
-
-{% block main-content %}
-<!DOCTYPE html>
-<head>
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Farro:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
-    <!-- CSS Files -->
-    <link href="{% static 'CSS/font-awesome.min.css' %}" rel="stylesheet" >
-    <link href="{% static 'CSS/style_userprofile.css' %}" rel="stylesheet" >
-</head>
-<body>
+{% block title %}{{ user.username }}'s Profile | CourseConnect{% endblock title %}
+{% block content %}
+    <br>
     <div class="body-container">
         <div class="about-info">
-            <div class="about-info-title">
-                <img src="" alt="">
-                <i class="fa fa-camera" aria-hidden="true"></i>
-                <h2 class="username">User Name</h2>
-                <h3>@username</h3>
-            </div>
-        <div class="about-info-options">
-            <h5 class="about-info-options-title">E-mail:</h5>
-            <h5 class="about-info-options-title">Birthday:</h5>
-            <h5 class="about-info-options-title">Language:</h5>
-        </div>  <!-- ./about-info-options -->
-        <div><button class="edit-profile-btn"><span>Edit Profile</span></button></div>
+            <center>
+                <div class="about-info-title">
+                    <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" style="width: 230px; height: 230px; margin-top: 5px;">
+                    <h2 style="margin-top: 10px;">{{ user.username }}</h2>
+                </div>
+            </center>
+            <div class="about-info-options">
+                <h5 class="about-info-options-title"><b>Name:</b> {{ user.first_name }} {{ user.last_name }}</h5>
+                <h5 class="about-info-options-title"><b>E-mail:</b> {{ user.email }} </h5>
+                <h5 class="about-info-options-title"><b>Birthdate:</b> {{ user.profile.birthdate }}</h5>
+                <h5 class="about-info-options-title"><b>Language:</b> {{ user.profile.get_language_display }}</h5>
+                <h5 class="about-info-options-title"><b>Gender:</b> {{ user.profile.get_gender_display }}</h5>
+                <center><a  href="{% url 'editprofile' %}"><button class="edit-profile-btn" style="width: 165px;"><span>Edit Profile</span></button></a></center>
+            </div>  <!-- ./about-info-options -->
         </div>  <!-- ./about-info -->
     
         <div class="other-info">
             <div class="skills">
-                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                <h4>Skills</h4>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                <h4><b>Skills</b></h4>
                 <h6>Skill 1</h6>
                 <h6>Skill 2</h6>
                 <h6>Skill 3</h6>
-                <button>Show All</button>
+                <a href="#"><button class="showbtn"><b>Show All</b></button></a>
             </div>  <!-- ./skills -->
             <div class="goals">
-                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                <h4>Goals</h4>
+                <a href="#"><i class="fa fa-plus"></i></a>
+                <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                <h4><b>Goals</b></h4>
                 <h6>Goal 1</h6>
                 <h6>Goal 2</h6>
                 <h6>Goal 3</h6>
-                <button>Show All</button>
+                <a href="#"><button class="showbtn"><b>Show All</b></button></a>
             </div>  <!-- ./goals -->
             <div class="experience">
-                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                <h4>Experience</h4>
-                <h6>Exp 1</h6>
-                <h6>Exp 2</h6>
-                <h6>Exp 3</h6>
-                <button>Show All</button>
+                <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                <h4><b>Experiences</b></h4>
+                <h6>Experience 1</h6>
+                <h6>Experience 2</h6>
+                <h6>Experience 3</h6>
+                <a href="#"><button class="showbtn"><b>Show All</b></button></a>
             </div>  <!-- ./experience -->
-            <div class="my-courses">
-                <a href="#"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                <h4>My Reviews</h4>
-                <h6>Course 1</h6>
-                <h6>Course 2</h6>
-                <h6>Course 3</h6>               
-                <button>Show All</button>
-            </div>  <!-- ./my-courses -->
+            <div class="reviews">
+                <a href="{% url 'review-create' %}"><i class="fa fa-plus" aria-hidden="true"></i></a>
+                <h4><b>Reviews</b></h4>
+                <h6>Review 1: {{reviews.all.0}}</h6>
+                <h6>Review 2: {{reviews.all.1}}</h6>
+                <h6>Review 3: {{reviews.all.2}}</h6>             
+                <a  href="{% url 'user-reviews' user.username %}"><button class="showbtn"><b>Show All</b></button></a>
+            </div>  <!-- ./review -->
         </div>  <!-- ./other-info -->
     </div>  <!-- ./body-container -->
 <script src="{% static 'JS/index.js' %}"></script>
-</body>
-</html>
-{% endblock main-content %}
+{% endblock %}
