--- a/CourseConnect/templates/pages/password_reset_complete.html
+++ b/CourseConnect/templates/pages/password_reset_complete.html
@@ -1,9 +1,22 @@
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Blinker&display=swap" rel="stylesheet" /> 
-     <link rel="stylesheet" href="../../static/app/css/register.css">
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-    <title>Password Reset Complete</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'CSS/login.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'Images/favicon.ico' %}">
 </head>
-<h2>Success!</h2>
-<h3>Password reset complete</h3>
-<p>Your password has been set. You may go ahead and <a href = "/login">log in now.</a></p>
+
+<body>
+    <div class="container">
+        <div class="element1">
+            <h2>Success!</h2>
+            <h3 class="login font-style">Password reset complete</h3>
+            <p>Your password has been set. You may go ahead and <a href="/login">log in now.</a></p>
+        </div>
+    </div>
+</body>
+
+</html>
