--- a/CourseConnect/templates/pages/password_reset_form.html
+++ b/CourseConnect/templates/pages/password_reset_form.html
@@ -1,7 +1,27 @@
-<h3> Enter new password </h3>
-<p> Please enter your new password twice so we can verify you typed it correctly</p>
-<form method="POST">
-    {% csrf_token %}
-    {{form}}
-    <input type="submit" name="Update password">
-</form>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'CSS/login.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'Images/favicon.ico' %}">
+    <title>Register | CourseConnect</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="element1">
+            <h3 class="login font-style"> Enter new password </h3>
+            <p> Please enter your new password twice so we can verify you typed it correctly</p>
+            <form method="POST">
+                {% csrf_token %}
+                {{form}}
+                <input type="submit" name="Update password" class="login-btn font-style font-size">
+            </form>
+        </div>
+    </div>
+</body>
+
+</html>
