--- a/CourseConnect/templates/pages/password_reset_sent.html
+++ b/CourseConnect/templates/pages/password_reset_sent.html
@@ -1,4 +1,26 @@
-<h3>Password reset sent</h3>
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-    If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'CSS/login.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'Images/favicon.ico' %}">
+    <title>Register | CourseConnect</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="element1">
+            <h3 class="login font-style">Password reset sent</h3>
+            <p style = "margin-left: 50px">We’ve emailed you instructions for setting your password,<br> if an account exists with the email you
+                entered. You should receive them shortly.<br>
+
+                If you don’t receive an email, please make sure you’ve entered the address you registered with, and
+                check your spam folder.</p>
+        </div>
+    </div>
+</body>
+
+</html>
