--- a/CourseConnect/CourseConnect/static/CSS/base.css
+++ b/CourseConnect/CourseConnect/static/CSS/base.css
@@ -69,8 +69,8 @@ nav{
 .btn2-a{
     color:black;
     text-decoration: none;
-
 }
+
 .logo{
     width: 12vw;
     height: 10vh;
@@ -82,8 +82,13 @@ nav{
 .option{
     text-decoration: none;
     color: rgba(120, 122, 130, 0.943);
-
 }
+
+.active2{
+    color: #9298eb !important;
+    background-color: #ddd;
+}
+
 .active, .option:hover{
     color: #9298eb;
 }
@@ -111,7 +116,7 @@ p{
 }
 
 body{
-height: fit-content;
+    height: fit-content;
 }
 
 .account{
@@ -121,5 +126,4 @@ height: fit-content;
 }
 .profilelogo:hover{
     resize: 150%;
-
 }
